added desktop compatibility and support for 600px above

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <img class="logo" src="/images/logo.svg"/>
           <button class="try-btn">Try It Free</button>
       </div>
-      <div class="container-1">
+      <div class="container-1 flex-ds">
         <div class="hero-content">
           <h1>
             Build The Community Your Fans Will Love
@@ -82,7 +82,7 @@
       <div class="footer-logo">
         <img class="logo white-logo" src="/images/logo.svg"/>
       </div>
-      <div>
+      <div class="footer-flex">
         <div class="contact">
           <div class="location flex">
             <img src="/images/icon-location.svg"/>  
